portafolio Miguel Yepes

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
             <input type="submit" value="Enviar" class="home-block-button b3" >
 
-            <input type="hidden" name="_next" value="http://localhost:8000/">
+            <input type="hidden" name="_next" value="https://miguel-angel-yepes-portafolio-web.netlify.app">
             <input type="hidden" name="_captcha" value="false">
         </form>
     </section>
