--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="home-block">
         <section class="home-block-section">
             <h1 class="home-block-title">Hola! Soy Miguel Ángel Yepes</h1>
-            <p class="home-block-p">Estudiante de quinto trimestre de Análisis y desarrollo de software</p>
+            <p class="home-block-p">Estudiante de Análisis y desarrollo de software</p>
             <a href="#portfolio" class="a">
                 <button class="home-block-button-2">
                     Portafolio
@@ -60,7 +60,7 @@
 
             <section class="about-block-section-s1">
                 <h2 class="about-block-title1 t1">¿Quien soy?</h2>
-                <p class="about-block-p1 p1" >Soy estudiante del quinto trimestre de la tecnología Análisis y desarrollo de software, (ADSO), tecnología ofrecida por el Sena. Me desempeño muy bien en labores de programación web, tanto en desarrollo backend como front end, asi como gestión de base de datos y funciones que se puedan requerir en pseudocódigos como c#, Python y entre otros. 
+                <p class="about-block-p1 p1" >Soy estudiante de la tecnología Análisis y desarrollo de software, (ADSO), tecnología ofrecida por el Sena. Me desempeño muy bien en labores de programación web, tanto en desarrollo backend como front end, asi como gestión de base de datos y funciones que se puedan requerir en pseudocódigos como c#, Python y entre otros. 
                     Así mismo, cuento con un número considerable de certificaciones y una publicación, por favor, siéntete libre de revisar mi hoja de vida para conocer más de mí!
                 </p>
                 <a href="#CV" class="a2">
@@ -220,7 +220,7 @@
         <section class="portfolio-block-section">
             <section class="portfolio-block-section1">
                 <section class="portfolio-img-container">
-                    <img src="assets/portfolio3.png" class="portfolio-img" alt="" onclick="redireccionar('https://github.com/Miguel-Angel-Yepes/boceto-portafolio-react.git')">
+                    <img src="assets/portfolio5.png" class="portfolio-img" alt="" onclick="redireccionar('https://github.com/Miguel-Angel-Yepes/boceto-portafolio-react.git')">
                 </section>
             </section>
                         
@@ -254,14 +254,14 @@
             <input class="input" type="text" name="subject" required>
 
             <label class="about-block-p1 p3" for="comments">Comentarios</label>
-            <textarea class="input" name="comments" cols="15" rows="5" required></textarea>
+            <textarea class="input" name="comments" cols="15" rows="5" maxlength="500" required></textarea>
 
             <input type="submit" value="Enviar" class="home-block-button b3" >
 
             <input type="hidden" name="_next" value="https://myepes-portfolio.netlify.app/">
             <input type="hidden" name="_captcha" value="false">
         </form>
-    </section>
+    </section>      
 
     <!-- Footer -->
     <footer class="footer">
@@ -311,3 +311,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
