--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </section>
             
             <section class="about-block-section-s2">
-                <h2 class="about-block-title1 t1">Mis fortalezas</h2>
+                <h2 class="about-block-title1 t1 tl1">Mis fortalezas</h2>
 
                 <section class="section-skills">
                     <section class="skill">
@@ -303,7 +303,7 @@
         </section>
             
             <section class="copyrightSection">
-                <p class="footerText ft1">Sitio elaborado por miguel Ángel Yepes</p>
+                <p class="footerText ft1">Sitio elaborado por Miguel Ángel Yepes</p>
         </section>
 
     </footer>
