commit 7 de junio

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <p class="about-block-p1 p2">Para acceder a mi hoja de vida dale click al botón de la derecha</p>
         </section>
         
-        <button onclick="redireccionar('https://drive.google.com/file/d/1GsdDT-FI8R7YFX09TVuQxAglAvSZenxv/view?usp=sharingg')" class="home-block-button b1">
+        <button onclick="redireccionar('https://drive.google.com/file/d/1uRLYxh28DhQf8sBOrPr7iNsQDjP5OHc6/view?usp=sharing')" class="home-block-button b1">
             Hoja de vida
         </button>
 
